mise en place du timer pour la descente des pieces

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="right">Right</string>
     <string name="rotate">Rotate</string>
     <string name="down">Down</string>
+    <string name="pause">Pause</string>
+    <string name="start">Start</string>
 </resources>
